--- a/recipe-crud/src/assets/main.css
+++ b/recipe-crud/src/assets/main.css
@@ -2,6 +2,9 @@
 
 #app {
   max-width: 1280px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
